--- a/src/sass/modules/home/_about-section.sass
+++ b/src/sass/modules/home/_about-section.sass
@@ -19,6 +19,7 @@
         color: rgb(255, 160, 18)
 
 .about-section2
+    padding-top: 10vh
     .title-section2
         p
             color:  rgb(68, 68, 68)
