--- a/src/sass/modules/home/_menu-specials.sass
+++ b/src/sass/modules/home/_menu-specials.sass
@@ -1,12 +1,14 @@
 .Check-our-Specials
+    padding-top: 10vh
+    padding-bottom: 10vh
     display: flex
     flex-direction: column
     gap: 3vh
-    .h2
-        font-family: satisfy
+    .h1
         text-align: center
-        font-weight: 600
+        font-family: satisfy
         color: rgb(95, 89, 80)
+        font-weight: 700
         span
             font-family: satisfy
             color: rgb(255, 176, 59)
@@ -19,6 +21,19 @@
             color: rgb(95, 89, 80)
             font-family: satisfy
             font-weight: 600
+
+.menu-tasty
+    padding-top: 10vh
+    h1
+        text-align: center
+        font-family: satisfy
+        color: rgb(95, 89, 80)
+        font-weight: 700
+        span
+            color: rgb(255, 176, 59)
+            font-family: satisfy
+                
+                
 @media  ( max-width: 430px )
              .Check-our-Specials
                 .p
