--- a/src/sass/modules/home/_contact-section.sass
+++ b/src/sass/modules/home/_contact-section.sass
@@ -1,9 +1,14 @@
 .second-form-section
     padding-inline: 3vw
+    padding-top: 5vh
+    padding-bottom: 10vh
     display: flex
     flex-direction: column
     gap: 2vh
 .contact-section
+    display: flex
+    flex-direction: column
+    gap: 3vh
     h2
         font-family: satisfy
         text-align: center
@@ -77,6 +82,8 @@
             border: 1px solid rgb(222, 226, 230)
             &::placeholder
                 color: rgb(89, 92, 95)
+#contact-us
+    padding-top: 10vh
 
 @media  ( max-width: 430px )
     .contact-section
