--- a/src/sass/modules/home/_event-section.sass
+++ b/src/sass/modules/home/_event-section.sass
@@ -8,9 +8,21 @@
      gap: 3vh
      color: white
      padding: 10vh 0
-     h2
+     position: relative
+     &::before
+        content: ""
+        position: absolute
+        top: 0
+        left: 0
+        height: 100%
+        width:100%
+        background: #000
+        opacity: 0.4
+     h1
         text-align: center
         font-family: satisfy
+        color: white
+        font-weight: 700
         span
             color: rgb(255, 176, 59)
             font-family: satisfy
