--- a/src/sass/modules/home/_form-section.sass
+++ b/src/sass/modules/home/_form-section.sass
@@ -1,8 +1,10 @@
 .form-section
+    padding-top: 10vh
     h1 
         text-align: center
         font-family: satisfy
         color: rgb(95, 89, 80)
+        font-weight: 700
         span
             font-family: satisfy
             color: rgb(255, 160, 18)
