--- a/src/sass/modules/home/_gallery.sass
+++ b/src/sass/modules/home/_gallery.sass
@@ -1,8 +1,13 @@
 #gallery
+    padding-top: 10vh
+    display: flex
+    flex-direction: column
+    gap: 4vh
     h1
         text-align: center
         font-family: satisfy
         color: rgb(95, 89, 80)
+        font-weight: 700
         span
             font-family: satisfy
             color: rgb(255, 176, 59)
