adding respoansive of chefs

--- a/src/sass/_allModules.sass
+++ b/src/sass/_allModules.sass
@@ -7,3 +7,4 @@
 @import ./modules/home/_contact-section
 @import ./modules/home/_footer
 @import ./modules/home/_menu-specials
+@import ./modules/home/_chefs
