--- a/src/sass/modules/home/_event-section.sass
+++ b/src/sass/modules/home/_event-section.sass
@@ -29,6 +29,16 @@
 .Organization-section
     display: flex
     justify-content: space-around
+    .left-side2
+        h4
+            border-bottom: 2px solid rgb(255, 176, 59)
+            width: 4.5vw
+            font-weight: 700
+        h3
+            color: rgb(255, 176, 59)
+            font-family: satisfy
+        p
+            width: 45vw
 .left-side
     h3
         color: rgb(255, 176, 59)
@@ -39,7 +49,8 @@
         background-attachment: scroll
         h2
             font-size: 40px
-        .left.side
+        .left.side2
+            p
                 padding-inline: 2vw
     .Organization-section
         flex-direction: column
@@ -47,5 +58,8 @@
         padding-inline: 3vw
         img
             width: 95vw
+        .left-side2
+            p
+                width: 90vw
 
     
