--- a/src/sass/modules/home/_menu-specials.sass
+++ b/src/sass/modules/home/_menu-specials.sass
@@ -40,6 +40,11 @@
                     width: 95vw
                 .h2
                     font-size: 35px
-                    font-weight: 600       
+                    font-weight: 600    
+                .description
+                    display: flex
+                    flex-direction: column-reverse
+                    gap: 4vh
+                    padding-top: 4vh
 
 
