--- a/src/sass/modules/home/_nav.sass
+++ b/src/sass/modules/home/_nav.sass
@@ -48,7 +48,15 @@ nav
 
 
 
-
+.bgOpacity::before
+        content: ""
+        position: absolute
+        top: 0
+        left: 0
+        height: 100%
+        width:100%
+        background: #171515
+        opacity: 0.5
 
 .first-section
     display: flex
@@ -61,6 +69,8 @@ nav
         width: 40vw
     h1
         font-family: satisfy
+        font-weight: 700
+        font-size: 40px
         span
             color: rgb(255, 176, 59)
             font-family: satisfy
@@ -117,6 +127,8 @@ nav
                 display: flex
             #check:checked ~ .menu
                 display: none
+            #check:checked ~ .btn1
+                opacity: 0
           
               
     header
